# newton-roots

./: GUINewton.pro  common.h  expr.cpp  expr.h  expr_test.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrix_test.cpp  meson.build  mock_test.cpp  solve.cpp  solve.h  solve_test.cpp
